packages/jsii/test/negatives/neg.const-enum.ts
export const enum NotAllowed {
  ThisEnum,
  GetsInlined,
  AndSoItGetsLost,
  ForJsii,
}
